--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,17 +21,18 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2'
+          ruby-version: '3.1'    # 3.1 is safest with al-folio
           bundler-cache: true
       - name: Install dependencies
-        run: bundle install
+        run: bundle install --jobs 4 --retry 3
       - name: Build with Jekyll
-        env: { JEKYLL_ENV: production }
+        env:
+          JEKYLL_ENV: production
         run: bundle exec jekyll build --trace
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
-        with: { path: _site }
-
+        with:
+          path: _site
   deploy:
     needs: build
     runs-on: ubuntu-latest
