--- a/_config.yml
+++ b/_config.yml
@@ -207,7 +207,7 @@ latest_posts:
 
 # Markdown and syntax highlight
 markdown: kramdown
-highlighter: rouge
+highlighter: blue
 kramdown:
   input: GFM
   syntax_highlighter_opts:
