Fix Jekyll config

--- a/_config.yml
+++ b/_config.yml
@@ -251,7 +251,7 @@ plugins:
   - jekyll-feed
   - jekyll-get-json
   - jekyll-imagemagick
-  - jekyll-jupyter-notebook
+  #- jekyll-jupyter-notebook
   - jekyll-link-attributes
   - jekyll-minifier
   - jekyll-paginate-v2
@@ -381,6 +381,7 @@ external_links:
   rel: external nofollow noopener
   target: _blank
   exclude:
+    - assets/jupyter/
 
 # -----------------------------------------------------------------------------
 # Responsive WebP Images
